--- a/08-HTML/homework/estilos.css
+++ b/08-HTML/homework/estilos.css
@@ -1,11 +1,20 @@
 body {
   width: 600px;
   margin: 0 auto; 
+  background-image: url("img33.jpg");
+  background-repeat: repeat-x;
+  background-position: 0 0;
+  
+}
+
+div {
+    border-bottom: 2px solid #e9e9e9;
+    justify-content: center;
+    align-items: center;
 }
 
 h1 {
-  color: coral;
-  
+  color: coral; 
 }
   
 img {
