--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -1,38 +1,101 @@
 /*
-Lección 3: Tarea de posicionamiento con CSS. Todo el trabajo debe hacerse en este archivo, por lo que si estás tocando cualquier otro
-archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
+Lección 3: Tarea de posicionamiento con CSS. Todo el trabajo debe hacerse en este archivo, por lo que si estás 
+tocando cualquier otro archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 */
 
 /* Ejercicio 1: Centrar el texto en un span */
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    display: block;
+    text-align: center;
+    color: forestgreen;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
+#ejercicioDos {
+    display: none;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-
+#ejercicioTres{
+    position: absolute;
+    margin-top: 100px;
+    margin-left: 200px;
+}
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
+#ejercicioCuatro {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
 
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
-
+#ejercicioCinco {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
 
 /* Ejercicio 6. */
+#ejercicioCinco {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    align-items: center;
+}
+
+/* Ejercicio 7. */
+#ejercicioSiete {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#ejercicioSiete #elementoUno  {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: chartreuse;
+    font-weight: bold;
+}
+
+#ejercicioSiete #elementoDos  {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: antiquewhite;
+    font-weight: bold;
+}
+
+#ejercicioSiete #elementoTres  {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background:cyan;
+    font-weight: bold;
+}
+
+#ejercicioSiete #elementoCuatro  {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background: coral;
+    font-weight: bold;
+}
